[tool.poetry]
name = "zerolan-ui"
version = "0.1.0"
description = ""
authors = ["AkagawaTsurunaki <AkagawaTsurunaki@outlook.com>"]
readme = "README.md"
packages = [{include = "zerolan", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
